<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ntxdev="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingLeft="27dp"
              android:paddingRight="27dp">

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:background="#333">

        <com.lfdb.parapesquisa.ui.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:id="@+id/modal_title"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="18dp"
                android:layout_gravity="center"
            ntxdev:font_weight="300"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modal_alert"
            android:layout_gravity="left|center_vertical"
            android:src="@drawable/icon_alert_paralightbox"
            android:layout_marginLeft="20dp" />

    </FrameLayout>

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#cccccc">
    </FrameLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:id="@+id/modal_content"
            android:background="#fff">

        <com.lfdb.parapesquisa.ui.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relogin_text1"
            android:id="@+id/relogin_text1"
            android:textColor="#000"
            android:padding="20dp"
            android:textSize="15dp"
            android:gravity="center" />

        <com.lfdb.parapesquisa.ui.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relogin_text2"
            android:id="@+id/relogin_text2"
            android:textColor="#000"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:gravity="center_horizontal" />

        <com.lfdb.parapesquisa.ui.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relogin_text3"
            android:id="@+id/relogin_text3"
            android:textColor="#000"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:gravity="center_horizontal" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#ccc"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:id="@+id/relogin_server"
                    android:textSize="18dp"
                    android:paddingLeft="17dp"
                    android:paddingRight="17dp"
                    android:hint="@string/login_server"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#666"
                    android:background="#fff"
                    android:layout_margin="1dp"
                    android:editable="false" />
            </FrameLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#ccc"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:id="@+id/relogin_username"
                    android:layout_margin="1dp"
                    android:background="#fff"
                    android:textColor="#666"
                    android:textSize="18dp"
                    android:paddingLeft="17dp"
                    android:paddingRight="17dp"
                    android:editable="false"
                    android:hint="@string/login_username" />
            </FrameLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#ccc"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:id="@+id/relogin_password"
                    android:layout_margin="1dp"
                    android:background="#fff"
                    android:paddingLeft="17dp"
                    android:paddingRight="17dp"
                    android:textSize="18dp"
                    android:textColor="#333"
                    android:inputType="textPassword"
                    android:hint="@string/login_password"
                    android:textCursorDrawable="@null" />
            </FrameLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/relogin_error"
                android:src="@drawable/icon_erro_preenchimento_campo"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:visibility="gone" />
        </FrameLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relogin_progress"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:indeterminate="true"
            android:visibility="gone" />

    </LinearLayout>

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
            android:id="@+id/frameLayout"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:background="#fff"
            android:id="@+id/modal_cancel"
            android:clickable="true">

            <com.lfdb.parapesquisa.ui.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_logout"
                android:id="@+id/textView"
                android:layout_gravity="center"
                ntxdev:font_weight="300"
                android:textColor="#6f6f6f" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#555"
                android:alpha=".5"
                android:id="@+id/click_mask"
                android:visibility="gone"></FrameLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#ccc"></FrameLayout>

        <FrameLayout
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:background="#fff"
                android:id="@+id/modal_buttoncontainer"
                android:clickable="true"
            android:layout_weight="1"
            android:visibility="visible">

            <com.lfdb.parapesquisa.ui.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:id="@+id/modal_button"
                    android:background="#fff"
                    android:textColor="#6f6f6f"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                ntxdev:font_weight="300"/>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#555"
                android:alpha=".5"
                android:id="@+id/click_mask"
                android:visibility="gone"></FrameLayout>
        </FrameLayout>

    </LinearLayout>

</LinearLayout>